--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/icofont.min.css">
 		<link rel="stylesheet" href="assets/css/font-awesome-pro.css">
 		<link rel="stylesheet" href="assets/css/scrollcue.css">
+		<link rel="stylesheet" href="assets/css/magnific-popup.min.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="assets/css/responsive.css">
 		<title>Stir - Multipurpose Agency HTML Template</title>
@@ -36,18 +37,44 @@
         </div>
 		<!--=== End Preloader Area ===-->
 
-		<!--=== Start Navbar Section ===-->
-		<div class="navbar-section bg-black">
+		<!--=== Start Header Area ===-->
+		<div class="header-area bg-black">
+			<div class="container mw-1680">
+				<div class="header-wrapper">
+					<div class="row align-items-center">
+						<div class="col-lg-6 col-md-6">
+							<div class="header-left-content text-center text-md-start">
+								<p>Welcome To Professional Creative Agency</p>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6">
+							<ul class="ps-0 mb-0 list-unstyled d-flex justify-content-center justify-content-md-end header-right-content gap-1 gap-sm-4 flex-wrap">
+								<li>
+									<a href="mailto:information@stir.com">information@stir.com</a>
+								</li>
+								<li>
+									<a href="tel:+52883256953129">+5288 32569 53129</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--=== Start Header Area ===-->
+
+		<!--=== Start Navbar Area ===-->
+		<div class="navbar-area bg-black">
 			<!--=== Start Main Navbar Section ===-->
 			<div class="main-nav">
-				<div class="container">
+				<div class="container mw-1680">
 					<nav class="navbar navbar-expand-md navbar-light">
 						<a class="navbar-brand" href="index.html">
 							<img src="assets/images/logo.svg" alt="logo">
 						</a> 
 						
 						<div class="collapse navbar-collapse for-mobile-menu" id="navbarSupportedContent">
-							<ul class="navbar-nav m-auto">
+							<ul class="navbar-nav me-auto">
 								<li class="nav-item">
 									<a href="#" class="nav-link dropdown-toggle active">
 										Home             
@@ -211,12 +238,34 @@
 								</li>
 							</ul>
 
-							<div class="nav-right-options">
-								<ul>
+							<div class="nav-right-options d-flex align-items-center">
+								<div class="language position-relative z-1">
+									<select class="form-select" aria-label="Default select example">
+										<option selected>English</option>
+										<option value="1">Arabic</option>
+										<option value="2">China</option>
+									</select>
+									<i class="fa-light fa-globe"></i>
+								</div>
+								<ul class="social-link ps-0 mb-0 list-unstyled">
 									<li>
-										<a href="tel:0800-1-027953" class="call-btn">
-											<i class="fa-solid fa-phone"></i>
-											<span>0800-1-027953</span>
+										<a href="https://facebook.com/" target="_blank">
+											<i class="fa-brands fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://twitter.com/" target="_blank">
+											<i class="fa-brands fa-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://instagram.com/" target="_blank">
+											<i class="fa-brands fa-instagram"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://linkedin.com/" target="_blank">
+											<i class="fa-brands fa-linkedin-in"></i>
 										</a>
 									</li>
 								</ul>
@@ -241,7 +290,221 @@
 			</div>
 			<!--=== End Mobile Navbar Section ===-->
 		</div>
-		<!--=== End Navbar Section ===-->
+		<!--=== End Navbar Area ===-->
+
+		<!--=== Start Banner Area ===-->
+		<div class="banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
+			<div class="container mw-1680">
+				<div class="position-relative z-1" data-cues="slideInUp" data-group="images">
+					<div class="banner-content">
+						<h1>Hello <span>Cosmopolite!</span> We are a Modern Creative Agency Based in <span>Canada</span></h1>
+						<a href="#" class="banner-btn">
+							<span>
+								Explore Our Services
+								<i class="fa-solid fa-arrow-up-right"></i>
+							</span>
+						</a>
+					</div>
+					<div class="creative-agency">
+						<div class="position-relative d-block text-center m-auto">
+							<img src="assets/images/video-img.jpg" class="rounded-pill" alt="video-img">
+							<a href="https://youtu.be/bk7McNUjWgw?si=m_dHkilr3ALPzNl9" class="popup-youtube video-btns position-absolute top-50 start-50 translate-middle text-decoration-none">
+								<i class="fa-sharp fa-solid fa-play"></i>
+							</a>
+						</div>
+						<p>Hi 👋. We are Stir A brand-driven Creative agency that infuses authenticity into everything we do.</p>
+					</div>
+					<a href="#about-us" class="scroll-btn">
+						<i class="fa-sharp fa-light fa-arrow-down"></i>
+					</a>
+				</div>
+			</div>
+
+			<img src="assets/images/shape-1.png" class="shape shape-1" alt="shape">
+		</div>
+		<!--=== End Banner Area ===-->
+
+		<!--=== Start Brands Area ===-->
+		<div class="brands-area ptb-100">
+			<div class="container">
+				<div class="brands-title">
+					<span>We Worked With Global Largest Brands</span>
+				</div>
+				<div class="d-flex justify-content-center justify-content-lg-between flex-wrap gap-2" data-cues="slideInUp">
+					<a href="#">
+						<img src="assets/images/brands-1.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-2.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-3.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-4.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-5.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-6.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-7.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-8.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-9.png" alt="brands">
+					</a>
+					<a href="#">
+						<img src="assets/images/brands-10.png" alt="brands">
+					</a>
+				</div>
+			</div>
+		</div>
+		<!--=== End Brands Area ===-->
+
+		<!--=== Start About Us Area ===-->
+		<div class="about-us-area pb-100">
+			<div class="container">
+				<div class="row align-items-center" data-cues="slideInUp">
+					<div class="col-lg-6">
+						<div class="about-us-img">
+							<img src="assets/images/about-us.png" alt="about-us">
+						</div>
+					</div>
+
+					<div class="col-lg-6">
+						<div class="about-us-content">
+							<span class="top-title">About Us</span>
+							<h2>Professional Design Agency to Provide Solutions</h2>
+							<p>Established with a vision to redefine the art of storytelling & design, we have been at the forefront of delivering groundbreaking creative solutions since our inception. Our agency is a dynamic powerhouse of talent, merging artistic flair with strategic acumen to bring visions to life.</p>
+							<div class="row">
+								<div class="col-lg-6 col-sm-6">
+									<ul class="ps-0 list-unstyled about-list">
+										<li>
+											Professional Problem Solutions
+										</li>
+										<li>
+											Customer Relationsh Management
+										</li>
+										<li>
+											Web Design & Development
+										</li>
+									</ul>
+								</div>
+								<div class="col-lg-6 col-sm-6">
+									<ul class="ps-0 list-unstyled about-list">
+										<li>
+											Business Development
+										</li>
+										<li>
+											Content Creation & Brand Strategy
+										</li>
+										<li>
+											Digital Creative Agency
+										</li>
+									</ul>
+								</div>
+							</div>
+							<a href="#" class="circle-btn d-inline-block text-decoration-none">
+								Learn More
+								<i class="fa-solid fa-arrow-up-right"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--=== End About Us Area ===-->
+
+		<!--=== Start Services Area ===-->
+		<div class="services-area bg-color-030303 pt-100 pb-75">
+			<div class="container">
+				<div class="section-title white-title" data-cues="slideInUp">
+					<span class="top-title">Our Services</span>
+					<h2>Professional & Creative Agency Solutions</h2>
+				</div>
+
+				<div class="row justify-content-center" data-cues="slideInUp">
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item">
+							<div class="icon">
+								<img src="assets/images/services-icon-1.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Strategy Consulting</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Product Management</li>
+								<li>Financial Advisory</li>
+								<li>Product Strategy</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item">
+							<div class="icon">
+								<img src="assets/images/services-icon-2.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Digital Marketing</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Marketing Strategies</li>
+								<li>Business Development</li>
+								<li>Financial Advisory</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item">
+							<div class="icon">
+								<img src="assets/images/services-icon-3.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Web Development</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Technology Solutions</li>
+								<li>Market Research Analysis</li>
+								<li>Project Management</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item">
+							<div class="icon">
+								<img src="assets/images/services-icon-4.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Creative Design</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Training & Development</li>
+								<li>Sustainability Consulting</li>
+								<li>Crisis Management</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-12">
+						<div class="text-center services-btn">
+							<a href="#" class="circle-btn d-inline-block text-decoration-none">
+								Learn More
+								<i class="fa-solid fa-arrow-up-right"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--=== End Services Area ===-->
 
 		
 
@@ -251,6 +514,7 @@
         <script src="assets/js/jquery.meanmenu.js"></script>
 		<script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/scrollcue.js"></script>
+        <script src="assets/js/magnific-popup.min.js"></script>
 		<script src="assets/js/custom.js"></script>
     </body>
 </html>
