--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<title>Stir - Multipurpose Agency HTML Template</title>
     </head>
 
-    <body id="why-us" data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+    <body>
 		<!--=== Start Preloader Area ===-->
 		<div class="preloader">
             <div class="content">
@@ -85,13 +85,13 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="index.html" class="nav-link active">Home Page One</a>
+											<a href="index.html" class="nav-link active">Home One</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-2.html" class="nav-link">Home Page Two</a>
+											<a href="index-2.html" class="nav-link">Home Two</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-3.html" class="nav-link">Home Page Three</a>
+											<a href="index-3.html" class="nav-link">Home Three</a>
 										</li>
 									</ul>
 								</li>
@@ -103,58 +103,29 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="company-history.html" class="nav-link">Company history Page</a>
+											<a href="about-us.html" class="nav-link">About Us</a>
 										</li>
 										<li class="nav-item">
-											<a href="team.html" class="nav-link">Team Page</a>
+											<a href="team.html" class="nav-link">Team</a>
 										</li>
 										<li class="nav-item">
-											<a href="our-pricing.html" class="nav-link">Our Pricing Page</a>
+											<a href="faq.html" class="nav-link">FAQ</a>
 										</li>
 										<li class="nav-item">
-											<a href="faq.html" class="nav-link">FAQ Page</a>
-										</li>
-										<li class="nav-item">
-											<a href="testimonials.html" class="nav-link">Testimonials Page</a>
-										</li>
-										
-										<li class="nav-item">
-											<a href="#" class="nav-link dropdown-toggle">
-												Shop
-												<i class="icofont-rounded-down"></i>               
-											</a>
-		
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="products.html" class="nav-link">Products Page</a>
-												</li>
-												<li class="nav-item">
-													<a href="cart.html" class="nav-link">Cart Page</a>
-												</li>
-												<li class="nav-item">
-													<a href="checkout.html" class="nav-link">Checkout Page</a>
-												</li>
-												<li class="nav-item">
-													<a href="single-product.html" class="nav-link">Single Products Page</a>
-												</li>
-												<li class="nav-item">
-													<a href="payment.html" class="nav-link">Payment Page</a>
-												</li>
-											</ul>
+											<a href="testimonials.html" class="nav-link">Testimonials</a>
 										</li>
 
 										<li class="nav-item">
 											<a href="#" class="nav-link dropdown-toggle">
-												Authentication       
-												<i class="icofont-rounded-down"></i>      
+												Authentication             
 											</a>
 		
 											<ul class="dropdown-menu">
 												<li class="nav-item">
-													<a href="sign-in.html" class="nav-link">Sign In Page</a>
+													<a href="sign-in.html" class="nav-link">Sign In</a>
 												</li>
 												<li class="nav-item">
-													<a href="sign-up.html" class="nav-link">Sign Up Page</a>
+													<a href="sign-up.html" class="nav-link">Sign Up</a>
 												</li>
 											</ul>
 										</li>
@@ -181,13 +152,10 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="services-style-one.html" class="nav-link">Services Style One Page</a>
+											<a href="services.html" class="nav-link">Services</a>
 										</li>
 										<li class="nav-item">
-											<a href="services-style-two.html" class="nav-link">Services Style Two Page</a>
-										</li>
-										<li class="nav-item">
-											<a href="single-services.html" class="nav-link">Single Services Page</a>
+											<a href="service-details.html" class="nav-link">Service Details</a>
 										</li>
 									</ul>
 								</li>
@@ -199,13 +167,10 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="services-style-one.html" class="nav-link">Portfolio Style One Page</a>
+											<a href="case-study.html" class="nav-link">Case Study</a>
 										</li>
 										<li class="nav-item">
-											<a href="services-style-one.html" class="nav-link">Portfolio Style Two Page</a>
-										</li>
-										<li class="nav-item">
-											<a href="single-services.html" class="nav-link">Single Portfolio Page</a>
+											<a href="cases-study-details.html" class="nav-link">Cases Study Details</a>
 										</li>
 									</ul>
 								</li>
@@ -217,10 +182,16 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="blog.html" class="nav-link">Blog Page</a>
+											<a href="products.html" class="nav-link">Products</a>
 										</li>
 										<li class="nav-item">
-											<a href="single-blog.html" class="nav-link">Single Blog Page</a>
+											<a href="cart.html" class="nav-link">Cart</a>
+										</li>
+										<li class="nav-item">
+											<a href="checkout.html" class="nav-link">Checkout</a>
+										</li>
+										<li class="nav-item">
+											<a href="product-details.html" class="nav-link">Product Details</a>
 										</li>
 									</ul>
 								</li>
@@ -232,7 +203,7 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="blog.html" class="nav-link">Blog Page</a>
+											<a href="blog.html" class="nav-link">Blog</a>
 										</li>
 										<li class="nav-item">
 											<a href="single-blog.html" class="nav-link">Single Blog Page</a>
@@ -943,6 +914,10 @@
 			<p class="copy-right">Copyright, <span>Stir</span> All Rights Reserved</p>
 		</div>
 		<!--=== End CopyRight Area ===-->
+
+		<div class="back-to-top text-center">
+			<i class="icofont-simple-up"></i>
+		</div>
 
         <!--=== JS Link ===-->
         <script src="assets/js/jquery.min.js"></script> 
