--- a/index-2.html
+++ b/index-2.html
@@ -60,13 +60,13 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="index.html" class="nav-link active">Home One</a>
+											<a href="index.html" class="nav-link active">Creative Agency</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-2.html" class="nav-link">Home Two</a>
+											<a href="index-2.html" class="nav-link">Business Agency</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-3.html" class="nav-link">Home Three</a>
+											<a href="index-3.html" class="nav-link">Digital Agency</a>
 										</li>
 									</ul>
 								</li>
@@ -502,24 +502,24 @@
 		</div>
 		<!--=== End Get In Touch Area ===-->
 
-		<!--=== Start Team Area Area ===-->
-		<div class="team-area">
+		<!--=== Start Team Area ===-->
+		<div class="team-area pt-100 pb-75">
 			<div class="container">
 				<div class="section-title style-two mw-800">
 					<span class="top-title">Our Team Members</span>
 					<h2>Meet Our Experienced Team Members</h2>
 				</div>
 
-				<div class="row">
-					<div class="col-lg-3 col-sm-6">
+				<div class="row justify-content-center">
+					<div class="col-xl-3 col-md-6">
 						<div class="team-single-item">
 							<img src="assets/images/team-1.jpg" alt="team">
 							<div class="d-flex justify-content-between align-items-center gap-3 flex-wrap">
-								<div class="">
+								<div class="info">
 									<h3>Diana Wilson</h3>
 									<span>UI/UX Designer</span>
 								</div>
-								<ul>
+								<ul class="ps-0 mb-0 list-unstyled social-link">
 									<li>
 										<a href="#">
 											<i class="fa-brands fa-facebook-f"></i>
@@ -540,6 +540,125 @@
 											<i class="fa-brands fa-linkedin-in"></i>
 										</a>
 									</li>
+									<li>
+										<a href="#">
+											<i class="fa-regular fa-plus"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-3 col-md-6">
+						<div class="team-single-item">
+							<img src="assets/images/team-2.jpg" alt="team">
+							<div class="d-flex justify-content-between align-items-center gap-3 flex-wrap">
+								<div class="info">
+									<h3>Diana Wilson</h3>
+									<span>UI/UX Designer</span>
+								</div>
+								<ul class="ps-0 mb-0 list-unstyled social-link">
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-instagram"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-linkedin-in"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-regular fa-plus"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-3 col-md-6">
+						<div class="team-single-item">
+							<img src="assets/images/team-3.jpg" alt="team">
+							<div class="d-flex justify-content-between align-items-center gap-3 flex-wrap">
+								<div class="info">
+									<h3>Diana Wilson</h3>
+									<span>UI/UX Designer</span>
+								</div>
+								<ul class="ps-0 mb-0 list-unstyled social-link">
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-instagram"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-linkedin-in"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-regular fa-plus"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-3 col-md-6">
+						<div class="team-single-item">
+							<img src="assets/images/team-4.jpg" alt="team">
+							<div class="d-flex justify-content-between align-items-center gap-3 flex-wrap">
+								<div class="info">
+									<h3>Diana Wilson</h3>
+									<span>UI/UX Designer</span>
+								</div>
+								<ul class="ps-0 mb-0 list-unstyled social-link">
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-instagram"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-brands fa-linkedin-in"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa-regular fa-plus"></i>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -547,9 +666,325 @@
 				</div>
 			</div>
 		</div>
-		<!--=== End Team Area Area ===-->
+		<!--=== End Team Area ===-->
 
+		<!-- Start marquee Us Area -->
+		<div class="marquee-area bg-color-dcfd68">
+			<div class="container-fluid">
+				<div class="marquee-wrapper">
+					<div class="marquee">
+						<a href="#">
+							<span>CONTACT US</span>
+						</a>
+						<a href="#">
+							<span>OUR CASE STUDIES</span>
+						</a>
+						<a href="#">
+							<span>LET’S TALK</span>
+						</a>
+						<a href="#">
+							<span>GET IN TOUCH</span>
+						</a>
+						<a href="#">
+							<span>CONTACT US</span>
+						</a>
+						<a href="#">
+							<span>OUR CASE STUDIES</span>
+						</a>
+						<a href="#">
+							<span>LET’S TALK</span>
+						</a>
+						<a href="#">
+							<span>GET IN TOUCH</span>
+						</a>
+						<a href="#">
+							<span>CONTACT US</span>
+						</a>
+						<a href="#">
+							<span>OUR CASE STUDIES</span>
+						</a>
+						<a href="#">
+							<span>LET’S TALK</span>
+						</a>
+						<a href="#">
+							<span>GET IN TOUCH</span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End marquee Us Area -->
+
+		<!-- Start Testimonials Area -->
+		<div class="testimonials-area-two ptb-100">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-lg-8">
+						<div class="testimonial-slide-two owl-carousel owl-theme">
+							<div class="testimonials-single-item-two">
+								<ul class="ps-0 list-unstyled d-flex gap-2 review">
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+								</ul>
+								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
+	
+								<div class="d-flex align-items-center info">
+									<div class="flex-shrink-0">
+										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
+									</div>
+									<div class="flex-grow-1 ms-3">
+										  <h3>Brandi Rowe</h3>
+										<span>Marketing Lead at Technlogia</span>
+									</div>
+								</div>
+							</div>
+							<div class="testimonials-single-item-two">
+								<ul class="ps-0 list-unstyled d-flex gap-2 review">
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+									<li>
+										<i class="fa-solid fa-star"></i>
+									</li>
+								</ul>
+								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
+	
+								<div class="d-flex align-items-center info">
+									<div class="flex-shrink-0">
+										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
+									</div>
+									<div class="flex-grow-1 ms-3">
+										  <h3>Brandi Rowe</h3>
+										<span>Marketing Lead at Technlogia</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="testimonial-img mt-4 mt-lg-0">
+							<img src="assets/images/testimonial-4.jpg" alt="testimonial">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Testimonials Area -->
+
+		<!-- Start Blog Area -->
+		<div class="blog-area pb-75">
+			<div class="container">
+				<div class="row align-items-center justify-content-center">
+					<div class="col-xl-4 col-md-6">
+						<div class="blog-info-content">
+							<span class="top-title">Update Blog</span>
+							<h2>Our Recent News and Insights</h2>
+							<p>Client satisfaction is at the heart of everything we do. We measure our success by the success of our clients. Therefore, we forge lasting...</p>
+							<a href="#" class="main-btn border-btn">
+								Browse All Blog
+								<i class="fa-regular fa-arrow-right"></i>
+							</a>
+						</div>
+					</div>
+					<div class="col-xl-4 col-md-6">
+						<div class="blog-single-item">
+							<a href="#" class="d-block blog-img">
+								<img src="assets/images/blog-1.jpg" alt="blog">
+							</a>
+							<ul class="ps-0 list-unstyled date">
+								<li>
+									<span>November 27, 2023</span>
+								</li>
+								<li>3 Minutes Read</li>
+							</ul>
+							<h3>
+								<a href="#">A Day in Fashion's Hidden Realms</a>
+							</h3>
+						</div>
+					</div>
+					<div class="col-xl-4 col-md-6">
+						<div class="blog-single-item">
+							<a href="#" class="d-block blog-img">
+								<img src="assets/images/blog-2.jpg" alt="blog">
+							</a>
+							<ul class="ps-0 list-unstyled date">
+								<li>
+									<span>November 27, 2023</span>
+								</li>
+								<li>3 Minutes Read</li>
+							</ul>
+							<h3>
+								<a href="#">A Wedding Photographer's Awesome Blog</a>
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Blog Area -->
+
+		<!-- Start Subscribe Newsletter Area -->
+		<div class="subscribe-newsletter-area bg-img" data-background="./assets/images/get-in-bg.jpg">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<div class="subscribe-newsletter-content">
+							<span class="top-title">Subscribe Newsletter</span>
+							<h2>Subscribe to Our Newsletter & Join Our Community</h2>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<form class="subscribe-newsletter-form">
+							<input type="text" class="form-control" placeholder="Enter your mail address">
+							<button type="submit" class="main-btn border-btn">
+								<span>Join Us Now</span>
+								<i class="fa-solid fa-paper-plane"></i>
+							</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Subscribe Newsletter Area -->
+
+		<!--=== Start Footer Area ===-->
+		<div class="footer-area pt-100 pb-75">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-4">
+						<div class="footer-single-item style-two">
+							<a href="#" class="logo">
+								<img src="assets/images/white-logo-2.svg" alt="">
+							</a>
+							<p>Join us on a journey where creativity knows no bounds and innovation thrives. Contact [Stir] today, & let's collaborate to bring your vision to life.</p>
+							<ul class="social-link ps-0 mb-0 list-unstyled">
+								<li>
+									<a href="https://facebook.com/" target="_blank">
+										<i class="fa-brands fa-facebook-f"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://twitter.com/" target="_blank">
+										<i class="fa-brands fa-twitter"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://instagram.com/" target="_blank">
+										<i class="fa-brands fa-instagram"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://linkedin.com/" target="_blank">
+										<i class="fa-brands fa-linkedin-in"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-8">
+						<div class="row">
+							<div class="col-lg-4 col-sm-6">
+								<div class="footer-single-item style-two">
+									<h3>Our Services</h3>
 		
+									<ul class="useful-link">
+										<li>
+											<a href="#">Strategic Consulting</a>
+										</li>
+										<li>
+											<a href="#">Digital Marketing</a>
+										</li>
+										<li>
+											<a href="#">Brand Development</a>
+										</li>
+										<li>
+											<a href="#">Financial Advisory</a>
+										</li>
+										<li>
+											<a href="#">Technology Solutions</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-lg-4 col-sm-6">
+								<div class="footer-single-item style-two">
+									<h3>Our Services</h3>
+		
+									<ul class="useful-link">
+										<li>
+											<a href="#">Strategic Consulting</a>
+										</li>
+										<li>
+											<a href="#">Digital Marketing</a>
+										</li>
+										<li>
+											<a href="#">Brand Development</a>
+										</li>
+										<li>
+											<a href="#">Financial Advisory</a>
+										</li>
+										<li>
+											<a href="#">Technology Solutions</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-lg-4 col-sm-6">
+								<div class="footer-single-item style-two">
+									<h3>Contact Us</h3>
+		
+									<ul class="contact-info">
+										<li>
+											<i class="fa-regular fa-location-dot"></i>
+											<span>Samwell Street, Trankturt 2589 New York.</span>
+										</li>
+										<li>
+											<i class="fa-regular fa-headphones"></i>
+											<a href="tel:+52883256953129">+5288 32569 53129</a>
+										</li>
+										<li>
+											<i class="fa-regular fa-envelope"></i>
+											<a href="mailto:information@stir.com">information@stir.com</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--=== End Footer Area ===-->
+
+		<!--=== Start CopyRight Area ===-->
+		<div class="copyright-area">
+			<div class="container">
+				<p class="copy-right style-two">Copyright, <span>Stir</span> All Rights Reserved</p>
+			</div>
+		</div>
+		<!--=== End CopyRight Area ===-->
 
 		<div class="back-to-top text-center">
 			<i class="icofont-simple-up"></i>
