--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
 									<ul class="dropdown-menu">
 										<li class="nav-item">
-											<a href="index.html" class="nav-link active">Home One</a>
+											<a href="index.html" class="nav-link active">Creative Agency</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-2.html" class="nav-link">Home Two</a>
+											<a href="index-2.html" class="nav-link">Business Agency</a>
 										</li>
 										<li class="nav-item">
-											<a href="index-3.html" class="nav-link">Home Three</a>
+											<a href="index-3.html" class="nav-link">Digital Agency</a>
 										</li>
 									</ul>
 								</li>
