--- a/index-2.html
+++ b/index-2.html
@@ -272,7 +272,7 @@
 					</div>
 					<div class="col-lg-6">
 						<div class="about-us-content-two">
-							<span class="top-title">Know About Us</span>
+							<span class="top-title style-two">Know About Us</span>
 							<h2>Most Distinguished Agency in Your City</h2>
 							<p>Our approach is rooted in collaboration and customization. We don't believe in one-size-fits-all solutions. Instead, we take the time to comprehensively analyze each client's unique needs, objectives, and industry landscape. By doing so, we ensure that our recommendations...</p>
 							<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services from strategic consulting</p>
@@ -298,7 +298,7 @@
 		<div class="services-area-two pb-100 overflow-hidden pos">
 			<div class="container">
 				<div class="section-title style-two mw-800">
-					<span class="top-title">Services We Provide</span>
+					<span class="top-title style-two">Services We Provide</span>
 					<h2>We Provide The Best Service for Our Agency</h2>
 				</div>
 
@@ -405,7 +405,7 @@
 		<div class="recent-cases-area pb-100">
 			<div class="container">
 				<div class="section-title ms-0 text-start">
-					<span class="top-title">Some Of Our Recent Cases</span>
+					<span class="top-title style-two">Some Of Our Recent Cases</span>
 					<h2>Unveiling Our Most Impactful Solutions for You</h2>
 				</div>
 				<div class="cases-slide owl-carousel owl-theme">
@@ -485,7 +485,7 @@
 				<div class="row align-items-center">
 					<div class="col-lg-8">
 						<div class="get-in-touch-content">
-							<span class="top-title">Get In Touch</span>
+							<span class="top-title style-two">Get In Touch</span>
 							<h2>Have Any Question In Your Mind? Discuss With Us</h2>
 						</div>
 					</div>
@@ -506,7 +506,7 @@
 		<div class="team-area pt-100 pb-75">
 			<div class="container">
 				<div class="section-title style-two mw-800">
-					<span class="top-title">Our Team Members</span>
+					<span class="top-title style-two">Our Team Members</span>
 					<h2>Meet Our Experienced Team Members</h2>
 				</div>
 
@@ -799,7 +799,7 @@
 				<div class="row align-items-center justify-content-center">
 					<div class="col-xl-4 col-md-6">
 						<div class="blog-info-content">
-							<span class="top-title">Update Blog</span>
+							<span class="top-title style-two">Update Blog</span>
 							<h2>Our Recent News and Insights</h2>
 							<p>Client satisfaction is at the heart of everything we do. We measure our success by the success of our clients. Therefore, we forge lasting...</p>
 							<a href="#" class="main-btn border-btn">
@@ -851,7 +851,7 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6">
 						<div class="subscribe-newsletter-content">
-							<span class="top-title">Subscribe Newsletter</span>
+							<span class="top-title style-two">Subscribe Newsletter</span>
 							<h2>Subscribe to Our Newsletter & Join Our Community</h2>
 						</div>
 					</div>
